# Smart-Salon-Scheduler

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: __init__.py  cache.py  exceptions.py  idempotency.py  logging.py  rate_limiter.py  security.py
backend/app/middleware/: __init__.py  error_handler.py  rate_limit.py  request_id.py  request_logger.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  availability_exception.py  customer.py  practitioner.py  review.py  salon.py  waitlist.py
backend/app/repositories/: __init__.py  appointment.py  audit_log.py  availability_exception.py  base.py  customer.py  practitioner.py  review.py  salon.py  waitlist.py
backend/app/schemas/: __init__.py  ai.py  appointment.py  common.py  customer.py  practitioner.py  review.py  salon.py  waitlist.py
backend/app/services/: __init__.py  ai_matching.py  booking.py  cancellation.py  google_places.py  notification.py  payment.py  practitioner.py  practitioner_service.py  salon.py  salon_services.py  scheduling.py  sentiment.py  waitlist.py
backend/app/tasks/: __init__.py  celery_app.py  cleanup.py  payments.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: confirm_payment.py  seed_data.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  package.json
frontend/src/: App.jsx  index.css  main.jsx
(+45 files in other folders)
